fix: api name issue and config verfier
