# restapi/operations/block/get_bundle_start_block_id_responses.go
@@ -1,194 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package block
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"greeenfield-bsc-archiver/models"
-)
-
-// GetBundleStartBlockIDOKCode is the HTTP code returned for type GetBundleStartBlockIDOK
-const GetBundleStartBlockIDOKCode int = 200
-
-/*
-GetBundleStartBlockIDOK successful operation
-
-swagger:response getBundleStartBlockIdOK
-*/
-type GetBundleStartBlockIDOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.GetBundleStartBlockIDRPCResponse `json:"body,omitempty"`
-}
-
-// NewGetBundleStartBlockIDOK creates GetBundleStartBlockIDOK with default headers values
-func NewGetBundleStartBlockIDOK() *GetBundleStartBlockIDOK {
-
-	return &GetBundleStartBlockIDOK{}
-}
-
-// WithPayload adds the payload to the get bundle start block Id o k response
-func (o *GetBundleStartBlockIDOK) WithPayload(payload *models.GetBundleStartBlockIDRPCResponse) *GetBundleStartBlockIDOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get bundle start block Id o k response
-func (o *GetBundleStartBlockIDOK) SetPayload(payload *models.GetBundleStartBlockIDRPCResponse) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetBundleStartBlockIDOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// GetBundleStartBlockIDBadRequestCode is the HTTP code returned for type GetBundleStartBlockIDBadRequest
-const GetBundleStartBlockIDBadRequestCode int = 400
-
-/*
-GetBundleStartBlockIDBadRequest Bad Request
-
-swagger:response getBundleStartBlockIdBadRequest
-*/
-type GetBundleStartBlockIDBadRequest struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewGetBundleStartBlockIDBadRequest creates GetBundleStartBlockIDBadRequest with default headers values
-func NewGetBundleStartBlockIDBadRequest() *GetBundleStartBlockIDBadRequest {
-
-	return &GetBundleStartBlockIDBadRequest{}
-}
-
-// WithPayload adds the payload to the get bundle start block Id bad request response
-func (o *GetBundleStartBlockIDBadRequest) WithPayload(payload *models.Error) *GetBundleStartBlockIDBadRequest {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get bundle start block Id bad request response
-func (o *GetBundleStartBlockIDBadRequest) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetBundleStartBlockIDBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(400)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// GetBundleStartBlockIDNotFoundCode is the HTTP code returned for type GetBundleStartBlockIDNotFound
-const GetBundleStartBlockIDNotFoundCode int = 404
-
-/*
-GetBundleStartBlockIDNotFound blob not found
-
-swagger:response getBundleStartBlockIdNotFound
-*/
-type GetBundleStartBlockIDNotFound struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewGetBundleStartBlockIDNotFound creates GetBundleStartBlockIDNotFound with default headers values
-func NewGetBundleStartBlockIDNotFound() *GetBundleStartBlockIDNotFound {
-
-	return &GetBundleStartBlockIDNotFound{}
-}
-
-// WithPayload adds the payload to the get bundle start block Id not found response
-func (o *GetBundleStartBlockIDNotFound) WithPayload(payload *models.Error) *GetBundleStartBlockIDNotFound {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get bundle start block Id not found response
-func (o *GetBundleStartBlockIDNotFound) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetBundleStartBlockIDNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(404)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
-
-// GetBundleStartBlockIDInternalServerErrorCode is the HTTP code returned for type GetBundleStartBlockIDInternalServerError
-const GetBundleStartBlockIDInternalServerErrorCode int = 500
-
-/*
-GetBundleStartBlockIDInternalServerError internal server error
-
-swagger:response getBundleStartBlockIdInternalServerError
-*/
-type GetBundleStartBlockIDInternalServerError struct {
-
-	/*
-	  In: Body
-	*/
-	Payload *models.Error `json:"body,omitempty"`
-}
-
-// NewGetBundleStartBlockIDInternalServerError creates GetBundleStartBlockIDInternalServerError with default headers values
-func NewGetBundleStartBlockIDInternalServerError() *GetBundleStartBlockIDInternalServerError {
-
-	return &GetBundleStartBlockIDInternalServerError{}
-}
-
-// WithPayload adds the payload to the get bundle start block Id internal server error response
-func (o *GetBundleStartBlockIDInternalServerError) WithPayload(payload *models.Error) *GetBundleStartBlockIDInternalServerError {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get bundle start block Id internal server error response
-func (o *GetBundleStartBlockIDInternalServerError) SetPayload(payload *models.Error) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetBundleStartBlockIDInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(500)
-	if o.Payload != nil {
-		payload := o.Payload
-		if err := producer.Produce(rw, payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
